fix wrapping of anchor tag text for button

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -102,6 +102,7 @@ main:is(.portfolio, .about) {
 a {
   text-decoration: none;
   font-family: sans-serif;
+  white-space: nowrap;
 }
 
 h1,
